examples/test/testpolicy386.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy386
  namespace: namespace462
spec:
  podSelector:
    matchLabels:
      key10: value34
      key11: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value41
          key13: value48
          key29: value48
      podSelector:
        matchLabels:
          key46: value40
